!6 Added comments in userController for swagger-doc * Added comments in userController for swagger-doc

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title><%-title%></title>
-    <script defer="defer" src="public/static/js/main.b51d47d0.js"></script>
-    <link href="public/static/css/main.83055a26.css" rel="stylesheet">
+    <title>test</title>
+    <script defer="defer" src="public/static/js/main.b3f6322e.js"></script>
+    <link href="public/static/css/main.b03fb23f.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
